# simple-ai_agent

./: README.md  call_functions.py  config.py  main.py  prompts.py  pyproject.toml  test_get_file_content.py
agent/: cli.py  config.py  main.py  prompts.py  runner.py  tool_registry.py
agent/tools/: fs_list.py  fs_read.py  fs_write.py  py_run.py  response_helper.py
calculator/: lorem_ipsum.txt
functions/: get_file_content.py  get_files_info.py  run_python_file.py
sandbox/calculator/: README.md
tests/: test_fs_list.py  test_fs_read.py  test_fs_write.py  test_get_files_info.py  test_helper.py  test_py_run.py  test_run_python_file.py  test_write_file.py
